# jackal_bsc

./: CMakeLists.txt  README.md  package.xml
config/: bsc_params.yaml  delay_params.yaml  drift_params.yaml  exp_params.yaml  rviz_exp.rviz  simmap.pgm
include/: BSCSolver.h  BSCTwistStamped.h
include/jackal_bsc/: BSCSolver.h  BSCTwistStamped.h
launch/: amcl_navigation.launch  bag_data.launch  bsc.launch  bsc_admin.launch  bsc_params.yaml  delay.launch  delay_params.yaml  drift.launch  drift_params.yaml  exp.launch  exp_params.yaml  gmapping_kinect.launch  jackal.launch  jackal_bsc.launch  jackal_delay.launch  jackal_sim.launch  jackal_teleop.launch  kinect.launch  kinect_tf.launch  odom_navigation.launch  ps4_relay.launch  rviz_nav.launch  scan.launch  teleop.launch
launch/experiment/: bsc.launch  delay.launch  exp.launch  rviz_exp.launch
launch/teleop/: teleop.launch
maps/: map.pgm  map.yaml  simmap.yaml
params/: base_local_planner_params.yaml  costmap_common_params.yaml
scripts/: data_collection.py  delay_node.py  delay_test.py  goal_test.py
src/: BSCSolver.cpp  BSCTwistStamped.cpp  bsc_node.cpp  data_collection.py  delay_node.cpp  delay_node.py  drift_node.cpp  kinect_tf_publisher.cpp  twist_stamped_publisher.cpp
